--- a/.npmignore
+++ b/.npmignore
@@ -6,19 +6,18 @@ e2e
 
 jest.config.json
 index.ts
-plugin.ts
 package-lock.json
 .eslintignore
 .eslintrc.js
 tsconfig.json
+tsconfig.build.json
+nest-cli.json
 .prettierrc
 .circleci
 .github
 
 # misc
-renovate.json
 npm-debug.log
 .DS_Store
 .commitlintrc.json
-.release-it.json
 CONTRIBUTING.md
