--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nestjs-ipfilter",
-  "version": "0.1.0",
+  "name": "@timi137/nestjs-ipfilter",
+  "version": "0.1.2",
   "description": "IP filter module for Nest framework (node.js) 🌎",
   "author": "悠静 <i@mikuhl.cn>",
   "license": "MIT",
