--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@timi137/nestjs-ipfilter",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "IP filter module for Nest framework (node.js) 🌎",
   "author": "悠静 <i@mikuhl.cn>",
   "license": "MIT",
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "rimraf dist && tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json",
     "format": "prettier --write \"{lib,example}/**/*.ts\"",
     "prepublish:npm": "npm run lint && npm run format && npm run build",
     "publish:npm": "npm publish --access public",
@@ -28,20 +28,19 @@
   "devDependencies": {
     "@nestjs/common": "^9.0.0 || ^10.0.0",
     "@nestjs/core": "^9.0.0 || ^10.0.0",
-    "@nestjs/platform-express": "10.3.0",
     "@types/node": "20.10.7",
-    "@typescript-eslint/eslint-plugin": "6.18.0",
-    "@typescript-eslint/parser": "6.18.0",
+    "@typescript-eslint/eslint-plugin": "6.18.1",
+    "@typescript-eslint/parser": "6.18.1",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prettier": "3.0.0",
-    "typescript": "5.1.6",
-    "reflect-metadata": "0.1.13",
-    "rimraf": "3.0.2",
-    "rxjs": "7.5.6"
+    "prettier": "3.1.1",
+    "typescript": "5.3.3",
+    "reflect-metadata": "0.2.1",
+    "rimraf": "5.0.5",
+    "rxjs": "7.8.1"
   },
   "peerDependencies": {
     "@nestjs/common": "^9.0.0 || ^10.0.0",
